--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@hapi/joi": "^17.1.0",
     "@material-ui/core": "^4.9.5",
+    "bcryptjs": "^2.4.3",
     "concurrently": "^5.1.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
