--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
   "dependencies": {
     "@hapi/joi": "^17.1.0",
     "@material-ui/core": "^4.9.5",
+    "@material-ui/icons": "^4.9.1",
     "bcryptjs": "^2.4.3",
     "concurrently": "^5.1.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "material-ui-icons": "^1.0.0-beta.36",
     "mongoose": "^5.9.3"
   },
   "devDependencies": {
