--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "material-ui-icons": "^1.0.0-beta.36",
+    "moment": "^2.24.0",
     "mongoose": "^5.9.3"
   },
   "devDependencies": {
