--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "material-ui-icons": "^1.0.0-beta.36",
     "minimist": "^1.2.5",
     "moment": "^2.24.0",
-    "mongoose": "^5.9.3"
+    "mongoose": "^5.9.3",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
