--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^0.19.2",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "chart.js": "^2.9.3",
     "concurrently": "^5.1.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
@@ -30,7 +31,8 @@
     "moment": "^2.24.0",
     "mongoose": "^5.9.3",
     "passport": "^0.4.1",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "react-chartjs-2": "^2.9.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
